Changes
=======

1.0a5 (2008-05-??)
------------------

- Bugfix: Fixed setting the value on text area for the real test
  browser. Thanks to Taylor Sittler for the bug report and fix.

- Bugfix: Fixed handling of named anchor links in mechanize implementation.

- Bugfix: Added test for named anchor links.

- Bugfix: Added tests for the ``click()`` method of item controls.

- Bugfix: Implemented item control's ``click()`` method for the real browser
  implementation. Also handles disabled controls correctly now.

- Bugfix: Correctly implement ``tb_set_checked()`` Javascript function for all
  cases of item controls.

- Feature: Improved test handler for HTTP to handle simple forms and multipart
  forms.

- Feature: Improved test of file upload element; now the passed in file contents
  will be submitted and the submission is tested.

- Feature: Correctly implemented the ``add_file()`` method of the control
  object for the real testbrowser implementation.


1.0a4 (2008-03-06)
------------------

- Bugfix: Fix some packaging bugs.


1.0a3 (2008-03-06)
------------------

- Restructure: Break out some interfaces so the various Browser
  implementations can tell fewer lies.

- Restructure: Make waiting for asynchronous events (like page loads) explicit.


1.0a2 (2008-02-15)
------------------

- Bugfix: removed pdb invocation on javascript error

- Bugfix: text content types where wrapped in html tags in ``testbrowser.real``

- Bugfix: ``getLink()`` did not wait until page is loaded in
  ``testbrowser.real``


1.0a1 (2007-09-28)
------------------

- First release under new name (non Zope-specific code extracted from
  zope.testbrowser)