@@ -17,13 +17,8 @@ interpreter = py
 [versions]
 ClientForm = 0.2.7
 mechanize = 0.1.7b
-setuptools = 0.6c7
 simplejson = 1.7.1
-zc.buildout = 1.0.0b30
-zc.recipe.egg = 1.0.0b6
-zc.recipe.testrunner = 1.0.0b8
 zope.event = 3.4.0
 zope.i18nmessageid = 3.4.0
 zope.interface = 3.4.0
 zope.schema = 3.3.0
-zope.testing = 3.5.1
