@@ -193,6 +193,12 @@
         </select>
       </div>
 
+      <div>
+        <label for="image-value-superstring">Control names should be able to be
+                                             superstrings of others</label>
+        <input type="text" name="image-value-superstring"
+               id="image-value-superstring" />
+      </div>
 
     </form>
 
