@@ -19,6 +19,8 @@ Changes
 - Bugfix: Correctly implement ``tb_set_checked()`` Javascript function for all
   cases of item controls.
 
+- Bugfix: Added <DOCTYPE and <html> node to browser.contents of real.Browser.
+
 - Feature: Improved test handler for HTTP to handle simple forms and multipart
   forms.
 
@@ -27,6 +29,9 @@ Changes
 
 - Feature: Correctly implemented the ``add_file()`` method of the control
   object for the real testbrowser implementation.
+
+- Feature: Support for Firefox 3 and Mozlab 0.1.9. Testbrowser does not work
+  with Mozlab 0.1.8 anymore due to API changes.
 
 
 1.0a4 (2008-03-06)
